--- a/AE -Banking+Data+-+Logistic+Regression-No+SMOTE.ipynb
+++ b/AE -Banking+Data+-+Logistic+Regression-No+SMOTE.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": null]]   "metadata": {},
    "outputs": [],
    "source": [
-    "<h2>Week 3 - Ana Estrada</h2>\n",
+    "# Week 3 - Ana Estrada\n",
     "Bank Marketing Dataset - UCI Repository - An Example Using Python\n",
     "I rant into some errors and solved them installing the following\n",
     "pip3 install imblearn<br/>\n",
